Modify Clustering section

--- a/bib_dl.bib
+++ b/bib_dl.bib
@@ -302,7 +302,7 @@
 @inproceedings{alexandrov_05_auto,
   title={Automatic extraction and forecast of time series cyclic components within the framework of SSA},
   author={Alexandrov, Th and Golyandina, N},
-  booktitle={Proc. of the 5th St. Petersburg Workshop on Simulation},
+  booktitle={Procedings of the St. Petersburg Workshop on Simulation},
   pages={45--50},
   year={2005}
 }
